[gd_scene load_steps=7 format=3 uid="uid://dk1xjbfpyqcyo"]

[ext_resource type="Script" uid="uid://ctyarwlxqhglg" path="res://Scripts/Menus/hud.gd" id="1_j171n"]
[ext_resource type="Texture2D" uid="uid://cvsg046rx7u0c" path="res://reload_better.png" id="2_gmmqc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j171n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmmqc"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_den20"]
bg_color = Color(0.40196425, 0.60742277, 3.85046e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j171n"]
bg_color = Color(0.6, 0.23529412, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.4)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_j171n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthPanel" type="PanelContainer" parent="Control"]
layout_mode = 0
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
offset_left = -368.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 132.0

[node name="HealthMargin" type="MarginContainer" parent="Control/HealthPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HealthBar" type="ProgressBar" parent="Control/HealthPanel/HealthMargin"]
material = SubResource("CanvasItemMaterial_j171n")
layout_mode = 2
custom_minimum_size = Vector2(0, 34)
theme_override_styles/background = SubResource("StyleBoxFlat_gmmqc")
theme_override_styles/fill = SubResource("StyleBoxFlat_den20")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="BottomRightPanel" type="PanelContainer" parent="Control"]
layout_mode = 0
anchors_preset = 14
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
offset_left = -300.0
offset_top = -160.0
offset_right = -16.0
offset_bottom = -72.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="BottomRightMargin" type="MarginContainer" parent="Control/BottomRightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="BottomRightVBox" type="VBoxContainer" parent="Control/BottomRightPanel/BottomRightMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="EnemiesLabel" type="Label" parent="Control/BottomRightPanel/BottomRightMargin/BottomRightVBox"]
layout_mode = 2
text = "Enemigos: 0"

[node name="AmmoLabel" type="Label" parent="Control/BottomRightPanel/BottomRightMargin/BottomRightVBox"]
layout_mode = 2
text = "Balas: 0 / 0"

[node name="BossHealthBar" type="ProgressBar" parent="Control"]
layout_mode = 0
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
offset_left = -220.0
offset_top = 16.0
offset_right = 220.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_j171n")
step = 1.0
value = 100.0
show_percentage = false

[node name="ReloadCircle" type="TextureProgressBar" parent="Control"]
visible = false
layout_mode = 0
anchors_preset = 14
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -372.0
offset_top = -146.0
offset_right = -308.0
offset_bottom = -82.0
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(128, 128)
max_value = 1.0
fill_mode = 4
texture_under = ExtResource("2_gmmqc")
texture_progress = ExtResource("2_gmmqc")
